# TipTracker

./: .env.example  .replit  README.md  api.py  app.py  auth.py  demo_data.py  models.py  pyproject.toml  replit.md  schema.sql
instance/: local-fallback.db
static/css/: custom.css
static/js/: app.js
templates/: index.html
